--- a/Projects/news.css
+++ b/Projects/news.css
@@ -75,7 +75,7 @@ article {
     grid-template-areas: "nav nav nav"
                          "first second third"
                          "fourth fifth fifth";
-    margin: 60px;
+    margin: 5%;
 }
 
 img{
