--- a/Projects/news.css
+++ b/Projects/news.css
@@ -19,6 +19,7 @@ p{
 
 
 nav{
+    display: flex;
     grid-area: nav;
     border: 2px solid black;
 }
@@ -32,7 +33,6 @@ ul{
 a{
     font-family: "Times New Roman", Times, serif;
     font-size: 2.5vw;
-    padding: 10px;
     color: slategray;
     text-decoration: none;
 }
