--- a/Projects/coffee/style.css
+++ b/Projects/coffee/style.css
@@ -75,6 +75,7 @@ body{
     display: flex;
     border-bottom: 2px  solid #DEBA96;
     justify-content: space-between;
+    margin: 5px;
 }
 
 .item .quantity{
