--- a/Projects/coffee/style.css
+++ b/Projects/coffee/style.css
@@ -144,7 +144,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 400px;
+    gap: 35%;
     margin: 25px;
 }
 
