bg color changed

--- a/Projects/calculator/style.css
+++ b/Projects/calculator/style.css
@@ -9,7 +9,7 @@ body{
     flex-direction: column;
     height: 100vh;
 
-    background-color: aquamarine;
+    background-color: ghostwhite;
 }
 
 h1{
