--- a/Projects/calculator/style.css
+++ b/Projects/calculator/style.css
@@ -16,8 +16,8 @@ h1{
     font-family: 'Autour One';
     font-size: 60px;
 
-    position: absolute;
-    top: 80px;
+    /* position: absolute;
+    top: 80px; */
 }
 
 .calculator{
