--- a/Projects/quiz/style.css
+++ b/Projects/quiz/style.css
@@ -10,7 +10,7 @@ body{
 
 header { 
     margin: 2rem auto;
-    width: 50vw;
+    width: 52vw;
 }
 
 header h1{
@@ -39,13 +39,14 @@ main {
 
 .quiz-box{
 
-    /* Box Setting */
-    width: 50vw;
-    height: 10vh;
+    /* setting box size */
+    width: 52vw;
+
     border: 1px solid black;
     border-radius: 8px;
     box-shadow: -4px 2px 16px -5px rgba(0,0,0,0.82);
     margin-bottom: 1rem;
+    padding: 1rem;
 
     /* font setting */
     font-family: 'Courier New', Courier, monospace;
@@ -53,9 +54,7 @@ main {
     font-weight: 500;
     
     /* setting text alignment */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 .options{
@@ -65,7 +64,7 @@ main {
 }
 
 button{
-    width: 50vw;
+    width: 52vw;
     padding: 5px 0;
     font-size: 1.2rem;
     border: 2px solid black;
@@ -83,7 +82,7 @@ button.incorrect{
 .explanation {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.2rem;
-    width: 50vw;
+    width: 52vw;
     text-align: center;
 
     padding: 1rem 0;
